// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOrders > behavior: empty result 1`] = `
{
  "nextCursor": null,
  "orders": [],
}
`;

exports[`getOrders > behavior: filter by isBid 1`] = `
{
  "nextCursor": "0x23",
  "orders": [
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 39n,
      "orderId": 19n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 39n,
      "prev": 19n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 37n,
      "orderId": 17n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 37n,
      "prev": 17n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 190000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 35n,
      "orderId": 15n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 190000000000000000000n,
      "tick": 400,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by isBid 2`] = `
{
  "nextCursor": "0x2c",
  "orders": [
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 22n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 260000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 42n,
      "orderId": 22n,
      "prev": 2n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 260000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 460000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 42n,
      "prev": 22n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 460000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 80000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 24n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 80000000000000000000n,
      "tick": -700,
    },
    {
      "amount": 280000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 44n,
      "orderId": 24n,
      "prev": 4n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 280000000000000000000n,
      "tick": -700,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by isFlip 1`] = `
{
  "nextCursor": "0x2c",
  "orders": [
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 22n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 260000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 42n,
      "orderId": 22n,
      "prev": 2n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 260000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 460000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 42n,
      "prev": 22n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 460000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 80000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 24n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 80000000000000000000n,
      "tick": -700,
    },
    {
      "amount": 280000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 44n,
      "orderId": 24n,
      "prev": 4n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 280000000000000000000n,
      "tick": -700,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by maker 1`] = `
{
  "nextCursor": "0x2c",
  "orders": [
    {
      "amount": 60000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 22n,
      "orderId": 2n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 60000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 260000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 42n,
      "orderId": 22n,
      "prev": 2n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 260000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 460000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 42n,
      "prev": 22n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 460000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 80000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 24n,
      "orderId": 4n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 80000000000000000000n,
      "tick": -700,
    },
    {
      "amount": 280000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 44n,
      "orderId": 24n,
      "prev": 4n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 280000000000000000000n,
      "tick": -700,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by remaining range 1`] = `
{
  "nextCursor": "0xa",
  "orders": [
    {
      "amount": 260000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 42n,
      "orderId": 22n,
      "prev": 2n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 260000000000000000000n,
      "tick": -900,
    },
    {
      "amount": 280000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 44n,
      "orderId": 24n,
      "prev": 4n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 280000000000000000000n,
      "tick": -700,
    },
    {
      "amount": 100000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 26n,
      "orderId": 6n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 100000000000000000000n,
      "tick": -500,
    },
    {
      "amount": 300000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 46n,
      "orderId": 26n,
      "prev": 6n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 300000000000000000000n,
      "tick": -500,
    },
    {
      "amount": 120000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 28n,
      "orderId": 8n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 120000000000000000000n,
      "tick": -300,
    },
  ],
}
`;

exports[`getOrders > behavior: filter by tick range 1`] = `
{
  "nextCursor": null,
  "orders": [
    {
      "amount": 140000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 30n,
      "orderId": 10n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 140000000000000000000n,
      "tick": -100,
    },
    {
      "amount": 340000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 50n,
      "orderId": 30n,
      "prev": 10n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 340000000000000000000n,
      "tick": -100,
    },
    {
      "amount": 540000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 50n,
      "prev": 30n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 540000000000000000000n,
      "tick": -100,
    },
    {
      "amount": 160000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 32n,
      "orderId": 12n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 160000000000000000000n,
      "tick": 100,
    },
    {
      "amount": 360000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000007",
      "flipTick": 0,
      "isBid": false,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 32n,
      "prev": 12n,
      "quoteToken": "0x20c0000000000000000000000000000000000006",
      "remaining": 360000000000000000000n,
      "tick": 100,
    },
  ],
}
`;

exports[`getOrders > behavior: multiple filters combined 1`] = `
{
  "nextCursor": "0x23",
  "orders": [
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 39n,
      "orderId": 19n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 39n,
      "prev": 19n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 37n,
      "orderId": 17n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 37n,
      "prev": 17n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 190000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 35n,
      "orderId": 15n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 190000000000000000000n,
      "tick": 400,
    },
  ],
}
`;

exports[`getOrders > default 1`] = `
{
  "nextCursor": "0x9",
  "orders": [
    {
      "amount": 230000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 39n,
      "orderId": 19n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 230000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 430000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 39n,
      "prev": 19n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 430000000000000000000n,
      "tick": 800,
    },
    {
      "amount": 210000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 37n,
      "orderId": 17n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 210000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 410000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 37n,
      "prev": 17n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 410000000000000000000n,
      "tick": 600,
    },
    {
      "amount": 190000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 35n,
      "orderId": 15n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 190000000000000000000n,
      "tick": 400,
    },
    {
      "amount": 390000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 35n,
      "prev": 15n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 390000000000000000000n,
      "tick": 400,
    },
    {
      "amount": 170000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 33n,
      "orderId": 13n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 170000000000000000000n,
      "tick": 200,
    },
    {
      "amount": 370000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 33n,
      "prev": 13n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 370000000000000000000n,
      "tick": 200,
    },
    {
      "amount": 150000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 31n,
      "orderId": 11n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 150000000000000000000n,
      "tick": 0,
    },
    {
      "amount": 350000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 31n,
      "prev": 11n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 350000000000000000000n,
      "tick": 0,
    },
  ],
}
`;

exports[`getOrders > default 2`] = `
{
  "nextCursor": "0x17",
  "orders": [
    {
      "amount": 130000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 29n,
      "orderId": 9n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 130000000000000000000n,
      "tick": -200,
    },
    {
      "amount": 330000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 49n,
      "orderId": 29n,
      "prev": 9n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 330000000000000000000n,
      "tick": -200,
    },
    {
      "amount": 530000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 49n,
      "prev": 29n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 530000000000000000000n,
      "tick": -200,
    },
    {
      "amount": 110000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 27n,
      "orderId": 7n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 110000000000000000000n,
      "tick": -400,
    },
    {
      "amount": 310000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 47n,
      "orderId": 27n,
      "prev": 7n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 310000000000000000000n,
      "tick": -400,
    },
    {
      "amount": 510000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 47n,
      "prev": 27n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 510000000000000000000n,
      "tick": -400,
    },
    {
      "amount": 90000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 25n,
      "orderId": 5n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 90000000000000000000n,
      "tick": -600,
    },
    {
      "amount": 290000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 45n,
      "orderId": 25n,
      "prev": 5n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 290000000000000000000n,
      "tick": -600,
    },
    {
      "amount": 490000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 45n,
      "prev": 25n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 490000000000000000000n,
      "tick": -600,
    },
    {
      "amount": 70000000000000000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 23n,
      "orderId": 3n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 70000000000000000000n,
      "tick": -800,
    },
  ],
}
`;
